# project-formater-fastAPI

./: .gitignore  .pre-commit-config.yaml  README.md  books.db  pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
app/: database.py  graphql_app.py  main.py  models.py  schemas.py
app demo code/: graphql_app.py  main.py  models.py
app demo code/alembic/: env.py
github/workflow/: main.yaml
